# SupplierContract

./: CHANGELOG.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
csskp/: config_dev.py
docker/python/: Dockerfile
docker/python/apache/: supliercontract.conf
locale/de/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
static/survey/css/: custom.css
static/survey/js/: survey-questions.js
survey/: context_processors.py  globals.py  models.py  reporthelper.py  urls.py  viewLogic.py  views.py
survey/migrations/: 0001_initial.py  0002_surveyanswerquestionsequence_surveyuserquestionhistory.py  0003_recommendationcategory.py  0999_insertdata_20191011_1200.py  1003_recommendationcategory.py  1003_surveyuserquestionsequence_is_active.py  1004_surveyuserquestionsequence_is_active.py  initial_data.sql
templates/survey/: answerChangingWarning.html  base.html  finishedSurvey.html  index.html  questions.html  start.html  terms.html
wtemps/: de_description.txt  de_intro.txt  en_description.txt  en_intro.txt  fr_description.txt  fr_intro.txt
