[tool.poetry]
name = "csskp"
version = "1.0.1"
description = "Supplier Contract is a tool developed by CASES.LU."
authors = [
    "Fabien Mathey <fabien.mathey@cases.lu>",
    "Ruslan Baidan <ruslan.baidan@cases.lu>",
    "Cédric Bonhomme <cedric@cedricbonhomme.org>",
    "Jeromé Lombardi <jerome.lombardi@cases.lu>",
    "Juan Rocha <juan.rocha@cases.lu>",
]
license = "AGPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/CASES-LU/SupplierContract"
repository = "https://github.com/CASES-LU/SupplierContract"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
python-docx = "^0.8.10"
matplotlib = "^3.1.3"
psycopg2-binary = "^2.8.4"
cryptography = "^2.8"
django-countries = "^5.5"
django-bootstrap-datepicker-plus = "^3.0.5"
django-bootstrap4 = "^1.1.1"
django-bootstrap-modal-forms = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
